--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -1,11 +1,17 @@
-body{
-    background-color: var(--background-color);
-}
+
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
+
+}
+
+body{
+    background-color: var(--background-color);
+    scroll-behavior: smooth;
+
 }
 
 .link{
