--- a/app/scss/sections/_about.scss
+++ b/app/scss/sections/_about.scss
@@ -7,6 +7,7 @@
             margin-bottom: 2rem;
             font-size: var(--tx2large);
             font-weight: 700;
+            counter-reset: title;
             &::before{
                 counter-increment: title;
                 content: "0" counter(title) ".";
