--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -1,11 +1,12 @@
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-
 }
 
 body{
@@ -41,5 +42,19 @@ body{
     }
     &:focus{
         outline: none;
+    }
+}
+
+
+body::-webkit-scrollbar{
+    width: 12px;
+    &-track{
+        background-color: var(--background-color);
+    }
+
+    &-thumb{
+        background-color: var(--dark-slate);
+        border: 3px solid var(--background-color);
+        border-radius: 10px;
     }
 }
