--- a/app/scss/sections/_hero.scss
+++ b/app/scss/sections/_hero.scss
@@ -25,4 +25,9 @@
     &-button{
         margin-top: 1rem;
     }
+    @media screen and (max-width: 768px){
+        &-text{
+            width: 90%;
+        }
+    }
 }
