--- a/app/scss/components/_email.scss
+++ b/app/scss/components/_email.scss
@@ -29,4 +29,11 @@
         margin: 0 auto;
     }
     
+    @media screen and (max-width: 1080px){
+        left: 2rem;
+    }
+    @media screen and (max-width: 1080px){
+        display: none;
+    }
+    
 }
