--- a/app/scss/components/_socialicons.scss
+++ b/app/scss/components/_socialicons.scss
@@ -36,4 +36,11 @@
             margin: 0 auto;
         }
     }
+    @media screen and (max-width: 1080px){
+        left: 2rem;
+    }
+    @media screen and (max-width: 1080px){
+        display: none;
+    }
+
 }
