--- a/app/scss/sections/_contact.scss
+++ b/app/scss/sections/_contact.scss
@@ -5,8 +5,7 @@
         font-size: var(--tbase);
         font-weight: 300;
         &::before{
-            counter-increment: title;
-            content: "0" counter(title) ".";
+            content: "04.";
             margin-right: 0.5rem;
             color: var(--theme-color);
         }
