--- a/app/scss/sections/_exp.scss
+++ b/app/scss/sections/_exp.scss
@@ -8,10 +8,8 @@
             margin-bottom: 2rem;
             font-size: var(--tx2large);
             font-weight: 700;
-            counter-increment: title;
             &::before{
-                counter-increment: title;
-                content: "0" counter(title) ".";
+                content: "02.";
                 margin-right: 0.5rem;
                 color: var(--theme-color)
             }
@@ -94,4 +92,54 @@
             }
         }
     }
+    @media screen and (max-width: 968px) {
+        .title {
+          h2 {
+            &::after {
+              width: 100px;
+            }
+          }
+        }
+      }
+      @media screen and (max-width: 600px) {
+        margin: 5rem auto;
+        .container {
+          grid-template-columns: 1fr;
+          padding: 1rem;
+          .exp-details {
+            height: max-content;
+          }
+          .exp-slider {
+            display: flex;
+            overflow-x: scroll;
+            
+            &::-webkit-scrollbar{
+                height: 2px;
+                width: 5px;
+                &-track{
+                    background-color: var(--background-color);
+                }
+                &-thumb{
+                    background-color: var(--theme-color);
+                }
+            }
+            overflow-y: hidden;
+            &::before {
+              display: none;
+            }
+            .underline {
+              display: none;
+            }
+          }
+        }
+      }
+      @media screen and (max-width: 480px) {
+        .title {
+          h2 {
+            &::after {
+              display: none;
+            }
+          }
+        }
+      }
 }
