--- a/app/scss/components/_loader.scss
+++ b/app/scss/components/_loader.scss
@@ -2,24 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-
-#hex{
-  background-color: #0a192f;
-}
-
 #hexagon{
   stroke-dasharray: 100;
   stroke-dashoffset: 100;
   stroke-width: 0.5;
-  stroke: #9d00ff;
-  animation: 3s ease-in forwards logo-load;
-  fill: #0a192f;
+  stroke: var(--theme-color);
+  animation: 5s ease-in forwards logo-load;
+  fill: var(--background-color);
   transform: scale(0.8);
 }
 
 #S{
   animation: 5s ease-in forwards logo;
-  fill: #0a192f;
+  fill: var(--background-color);
   transform: scale(0.8);
 }
 
@@ -29,10 +24,6 @@
     stroke-dashoffset: 100;
   }
 
-  70%{
-    stroke-dashoffset: 40;
-  }
-
   100%{
     stroke-dashoffset: 0;
   }
@@ -40,9 +31,9 @@
 
 @keyframes logo{
   0%{
-    fill: #0a192f;
+    fill: var(--background-color);
   }
   100%{
-    fill: #9d00ff;
+    fill: var(--theme-color);
   }
 }
