--- a/app/scss/sections/_contact.scss
+++ b/app/scss/sections/_contact.scss
@@ -5,7 +5,8 @@
         font-size: var(--tbase);
         font-weight: 300;
         &::before{
-            content: "04.";
+            /* content: "04."; */
+            content: "03.";
             margin-right: 0.5rem;
             color: var(--theme-color);
         }
